--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ body{
 }
 
 .card{
-  height:30rem;
+  height:33rem;
   width:20rem;
   border-radius: 1.88rem;
 }
@@ -109,7 +109,7 @@ body{
 
 .left-card-title
 {
-  font-size: 1.13rem;
+  font-size: 1.2rem;
   margin-top:1.88rem;
 }
 
@@ -123,7 +123,7 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
-}
+  }
 
 .circle-number
 {
@@ -141,28 +141,27 @@ body{
 .card-text
 {
   color:var(--White);
-  font-size:24px;
+  font-size:1.75rem;
+  margin-top:3.13rem;
 }
 
 .card-content
 {
-  font-size:13px;
-  margin-left:70px;
-  margin-right:70px;
+  font-size:1rem;
   text-align: center;
-  margin-top:-0.63rem;
+  margin:-0.63rem 3.13rem 0 3.13rem;
 }
 
 .right-card
 {
   display:flex;
   flex-direction: column;
-  margin-left:50px;
+  margin-left:1.88rem;
 }
 
 .right-card h3{
   margin-top:1.88rem;
-  font-size: 1.13rem;
+  font-size: 1.2rem;
 }
 
 .right-card-list
@@ -170,7 +169,7 @@ body{
   list-style-type: none;
   display: flex;
   flex-direction: column;
-  gap:18px;
+  gap:30px;
 
 }
 
@@ -178,10 +177,10 @@ body{
 {
   display:flex;
   justify-content: space-evenly;
-  width: 16rem;
+  width: 18rem;
   height: 3rem;
   padding: 0.5rem;
-  border-radius: 10px;
+  border-radius: 0.63rem;
   align-items: center;
   color:gray;
 }
@@ -190,7 +189,7 @@ body{
 {
   color: black;
   font-weight: 700;
-  margin-left:80px;
+  margin-left:5rem;
 }
 
 .logo-description
@@ -226,11 +225,11 @@ button {
   background: linear-gradient(0deg, rgba(48, 59, 89, 1) 0%, rgba(48, 59, 89, 1) 100%);
   border: none;
   height: 3rem;
-  width: 16rem;
-  border-radius: 30px;
+  width: 18rem;
+  border-radius: 1.88rem;
   font-size: 0.9rem;
   transition: all 2s ease-in;
-
+  margin-top:1.25rem;
 }
 
 button:hover {
@@ -246,7 +245,7 @@ button:hover {
            
     }
     .left-card{
-      width:375px;
+      width:23.44rem;
     }
    
 }
